# vtk-sdk-python-distributions

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
cmake/: download-vtk-sdk.cmake  vtk-config-version.cmake.in  vtk-config.cmake.in  vtk-sdk-urls.cmake
docs/: conf.py  index.md
scripts/: update_vtk_sdk_version.py
src/vtk_sdk/: __init__.py
src/vtk_sdk/cmake/: __init__.py
tests/: test_compiled.py  test_find_package.py
